Change deprecated CacheNodeType

--- a/resources.yml
+++ b/resources.yml
@@ -44,7 +44,7 @@ Resources:
     Type: AWS::ElastiCache::CacheCluster
     Properties:
       Engine: redis
-      CacheNodeType: cache.m4.large
+      CacheNodeType: cache.t3.small
       NumCacheNodes: 1
       CacheSubnetGroupName: !Ref 'RedisSubnetGroup'
       VpcSecurityGroupIds:
